src/test/scala/wacc/ext_pair/invalid/nullReassignment.wacc
# abstract type cannot be assigned to abstract type
# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(pair, pair) a = null;
  pair(int, pair) b = newpair(1, null);
  pair(int, pair) c = newpair(2, b);
  pair(int, pair) d = newpair(2, c);
  a = b;
  a = c;
  a = d;
  a = newpair(b, c)
end
